# Shaga-Program

./: Anchor.toml  Makefile  README.md
app/shaga_joe/idl/: shaga.json
app/shaga_joe/src/: main.ts
app/shaga_joe/src/custom/: instructions.ts
programs/shagaJoe/: Cargo.toml
programs/shagaJoe/src/: checks.rs  errors.rs  lib.rs  seeds.rs
programs/shagaJoe/src/instructions/: create_affair.rs  create_lender.rs  create_session.rs  end_rental.rs  initialize_end_affair_thread.rs  initialize_end_rental_thread.rs  join_session.rs  mod.rs  start_rental.rs  terminate_affair.rs  terminate_session.rs  terminate_vacant_affair.rs
programs/shagaJoe/src/states/: affair.rs  affair_list.rs  escrow.rs  lender.rs  mod.rs  rental.rs  session.rs  session_list.rs
