[package]
name = "Shaga_joe"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "Shaga_joe"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
clockwork-sdk = "2.0.18"
getrandom = { version = "0.2.9", features = ["custom"] }
session-keys = { version = "2.0.1", features = ["no-entrypoint"] }
solana-program = "=1.14.28"
winnow="=0.4.1"
